test/bad/nullables/nullable03.px

func f(String s) def
    return

String? s = ""
f(s)
